Added the code changes for text to speech

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -144,6 +144,10 @@ Import-Package: javax.annotation;version=0.0.0,*
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>mvc-auth-commons</artifactId>
+		</dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
